# van_turco

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  TODO
kernel32/: kernel32.hpp
kernel32/context/: interrupts.hpp  svc.s
kernel32/context/init/: init.cpp  init.hpp
kernel32/executables/: executable.hpp
kernel32/executables/elf/: elf.cpp  elf.hpp
kernel32/loggin/: logs.cpp  logs.hpp
kernel32/messages/: messages.cpp  messages.hpp
kernel32/preemptive/: sdk_lock.c  sdk_lock.cpp  sdk_lock.h  sdk_lock.hpp  systick.cpp  systick.hpp  systick.s
kernel32/process/: process.cpp  process.hpp
kernel32/scheduler/: scheduler.cpp  scheduler.hpp
kernel32/syscalls/: syscall.cpp  syscall.hpp
lib/: libarbys.cpp
modules/: mod.cpp
modules/vga_test/: hsync.pio  rgb.pio  vga.h  vsync.pio
src/: main.cpp
tests/: nabidad(1).rgba  out.txt  rgba2rgby.py
